# salary_aggregator_tgbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bot.py  config.py  data_loader.py  docker-compose.yaml  pyproject.toml  test_aggregation_salaries.py
salary_aggregator/: aggregator.py  db.py  utils.py
sampleDB/: sample_collection.metadata.json
